--- a/Alprazolam_onepage.html
+++ b/Alprazolam_onepage.html
@@ -16,7 +16,7 @@ Addiction &amp; Dependence
 Memory &amp; Coordination Problems
 Severe Withdrawal if stopped suddenly
 Overdose Danger, especially with alcohol or opioids</div>
-<img class='elem' src='assets/image_1.png' style='left:466px;top:124px;width:470px;height:310px' alt='slide image'/>
-<img class='elem' src='assets/image_2.png' style='left:243px;top:437px;width:515px;height:247px' alt='slide image'/>
+<img class='elem' src='image_1.png' style='left:466px;top:124px;width:470px;height:310px' alt='slide image'/>
+<img class='elem' src='image_2.png' style='left:243px;top:437px;width:515px;height:247px' alt='slide image'/>
 <div class='elem text' style='left:36px;top:375px;width:409px;height:38px'>⚠️ Call Emergency Help Immediately!</div>
 </div></body></html>
