--- a/Alprazolam_onepage.html
+++ b/Alprazolam_onepage.html
@@ -1,22 +1,12 @@
 <!doctype html>
 <html lang='en'>
 <head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/>
-<title>Slide 3 - Alprazolam</title>
 <style>
 body{font-family: Arial, sans-serif; background:#f7fafc; margin:0; padding:20px;}
-.slide{position:relative;width:1024px;height:768px;background:white;margin:0 auto;box-shadow:0 8px 30px rgba(0,0,0,0.1);}
+.slide{position:relative;width:1040px;height:790px;background:white;margin:0 auto;box-shadow:0 8px 30px rgba(0,0,0,0.1);}
 .elem{position:absolute;box-sizing:border-box;padding:6px;}
 .text{white-space:pre-wrap;}
 </style></head><body>
 <div class='slide' id='slide'>
-<div class='elem text' style='left:328px;top:-11px;width:302px;height:96px'>Alprazolam</div>
-<div class='elem text' style='left:293px;top:77px;width:373px;height:38px'>Misuse &amp; Public Awareness</div>
-<div class='elem text' style='left:35px;top:140px;width:409px;height:213px'>Why Misuse is Harmful?
-Addiction &amp; Dependence
-Memory &amp; Coordination Problems
-Severe Withdrawal if stopped suddenly
-Overdose Danger, especially with alcohol or opioids</div>
-<img class='elem' src='image_1.png' style='left:466px;top:124px;width:470px;height:310px' alt='slide image'/>
-<img class='elem' src='image_2.png' style='left:243px;top:437px;width:515px;height:247px' alt='slide image'/>
-<div class='elem text' style='left:36px;top:375px;width:409px;height:38px'>⚠️ Call Emergency Help Immediately!</div>
-</div></body></html>
+<img class='elem' src='image_3.png' alt='slide image'/>
+</body></html>
