--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ body{font-family: Arial, sans-serif; background:#f7fafc; margin:0; padding:20px;
 .text{white-space:pre-wrap;}
 </style></head><body>
 <div class='slide' id='slide'>
-<img class='elem' src='image_3.png' alt='slide image'/>
+<img class='elem' src='/image_3.png' alt='slide image'/>
 </body></html>
